--- a/CodeProduceSwift/Info.plist
+++ b/CodeProduceSwift/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>代码生成</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -43,6 +45,8 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string>访问文件目录</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 eport2. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
@@ -53,7 +57,5 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
-	<key>NSFileProviderDomainUsageDescription</key>
-	<string>访问文件目录</string>
 </dict>
 </plist>
